# wawona-mysticgiggle-version

./: .gitignore  Cargo.toml  NOTICE.example  README.md  build_all.py  flake.nix
.github/: FUNDING.yml
.github/scripts/: ci-failure-baseline.py  nix-retry.sh  verify-android-config.py  verify-android-maintainability.py  verify-android-nochroot.py  verify-android-upgrade-guardrails.py
.github/workflows/: build.yaml  nix.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt
dependencies/: README.md  gradle-deps.json  gradle-deps.nix  inspect_clang.nix
dependencies/android/: sdk-config.nix
dependencies/apple/: default.nix
dependencies/clients/foot/: android.nix  ios.nix  macos.nix
dependencies/clients/wawona-shell/: default.nix  sources.nix
dependencies/clients/wawona-tools/: Cargo.toml  default.nix
dependencies/clients/weston/: android.nix  ios.nix
dependencies/generators/: gradlegen.nix  xcodegen.nix
dependencies/libs/epoll-shim/: ios.nix  macos.nix
dependencies/libs/expat/: android.nix  ios.nix  macos.nix
dependencies/libs/fcft/: macos.nix
dependencies/libs/ffmpeg/: android.nix  ios.nix  macos.nix
dependencies/libs/fontconfig/: macos.nix
dependencies/libs/freetype/: macos.nix
dependencies/libs/libffi/: android.nix  ios.nix  macos.nix
dependencies/libs/libssh2/: android.nix  ios.nix
dependencies/libs/libwayland/: android.nix  ios.nix  macos.nix
dependencies/libs/libxml2/: android.nix  ios.nix  macos.nix
dependencies/libs/lz4/: android.nix  ios.nix  macos.nix
dependencies/libs/mbedtls/: android.nix  ios.nix
dependencies/libs/openssh/: android.nix  ios.nix
dependencies/libs/openssl/: android.nix  (+1 more)
dependencies/toolchains/: android-cmake.nix  android-toolchain-sanity.nix  android.nix  default.nix  ios-xcodeenv.nix
dependencies/utils/: android-wrapper.nix  xcode-wrapper.nix
dependencies/wawona/: android.nix  app-programs.nix  common.nix  devshells.nix  ios.nix  macos.nix  rust-backend-android-brp.nix  rust-backend-c2n.nix  rust-backend-ios-brp.nix  shell-wrappers.nix  workspace-src.nix
docs/: 2026-ARCHITECTURE-STRUCTURE.md  2026-COMPOSITOR-COMPARISON-AND-ROADMAP.md  2026-Liquid-Glass.md  2026-SOURCE-LAYOUT-RULES.md  2026-nix-build-system.md  THIRD_PARTY_LICENSES.md  android-maintainability-checkpoint.md  android-nochroot-audit.md  android-upgrade-guardrails.md  compilation.md  machine-profiles.md  macos-implementation.md
docs/drivers-how-to/: 01-architecture.md  02-platforms.md  03-moltenvk-kosmickrisp.md  04-android-vulkan.md  05-integration-workflow.md  06-resources.md  README.md
scripts/: check-udeps.sh  embed-android-shaders.sh  fetch_driver_docs.sh  list-licenses.sh  local-runner.nix  local_runner.py  prepare_mac_remote.sh
src/: lib.rs  main.rs
src/core/: compositor.rs  ipc.rs  mod.rs  runtime.rs  traits.rs
src/ffi/: api.rs  c_api.rs  mod.rs  ssh.rs
src/scripts/: update_ios_versions.sh
src/stubs/: egl_buffer_handler.c  egl_buffer_handler.h
src/tests/: harness.rs  integration.rs  mod.rs  surface.rs  wayland.rs  window.rs  window_management.rs
src/util/: WWNLog.h  logging.rs  mod.rs  ssh.rs
utils/: xcode-wrapper.nix
(+197 files in other folders)
