[package]
name = "wawona-tools"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wawona = { path = "../../.." }
ash = "0.38"
chrono = "0.4"
clap = { version = "4", features = ["color", "derive", "env"] }
libc = "0.2.180"
serde_json = "1.0"
tracing-subscriber = { version = "0.3.22", features = ["chrono", "local-time"] }
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["client", "staging", "unstable"] }
xkbcommon = { version = "0.8", features = ["wayland"] }
